# qt_notepad

./: CMakeLists.txt  main.cpp  notepad.cpp  notepad.h
